Clean up and add 3 more characters